--- a/app/templates/app/template.html
+++ b/app/templates/app/template.html
@@ -30,7 +30,7 @@
                 <div class="f_label palker">Наши сорта</div>
                 <div class="f_sorst_column">
                     {% for bottle in bottles %}
-                        <a href="/nashi-sorta/pivo/all#{{ bottle.sub_name }}">{{ bottle.name }}</a>
+                        <a href="/nashi-sorta/{{ bottle.group.url }}/all#{{ bottle.sub_name }}">{{ bottle.name }}</a>
                     {% endfor %}
                 </div>
                 <div class="f_btns oh">
