--- a/app/templates/app/contacts.html
+++ b/app/templates/app/contacts.html
@@ -55,21 +55,18 @@
                 <div class="contacts_form segoe">
                     <div class=" c_form_block">
                         <p><b>Адрес завода:</b> Ленинский просп, 158/3</p>
-                        <p><b>Телефон:</b> +7 (920) 467-65-08</p>
+                        <p><b>Вопросы сотрудничества:</b> +7 (920) 467-65-08</p>
+                        <p><b>Производство:</b> +7 (903) 025-96-78</p>
                         <p><b>E-mail :</b> info@ravencraftbeer.ru</p>
                         <p><b>Время работы: </b> Пн-Пт 9-00 до 19-00</p>
                     </div>
                     <div class="c_form_block">
                         <p><b>Мы в соц. сетях</b></p>
-                        <div class="c_social">
-                            <a href="https://vk.com/ravencraftbeer"><b>vk.com/ravencraftbeer</b></a>
-                        </div>
-                        <div class="c_social">
-                            <a href="https://facebook.com/ravencraftbeer"><b>facebook.com/ravencraftbeer</b></a>
-                        </div>
-                        <div class="c_social">
-                            <a href="https://www.instagram.com/explore/tags/ravencraft/"><b>Instagram</b></a>
-                        </div>
+                <div class="h_logos">
+                    <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
+                    <a href="https://www.facebook.com/Ravencraftbeer" target="_blank" class="facebook_circle"></a>
+                    <a href="https://www.instagram.com/ravencraftvrn/" target="_blank" class="instagram_circle"></a>
+                </div>
                     </div>
                     <div class="c_form_block">
                         <p>Напишите нам:</p>
