--- a/app/templates/app/where_buy.html
+++ b/app/templates/app/where_buy.html
@@ -25,26 +25,32 @@
                     +7-920-467-65-08.</b></p>
             </div>
             <div class="shop_list segoe">
+                <a href="https://vk.com/ravencraftshop" target="_blank">
                 <div class="shop">
                     <h2 class="palker">Фирменный магазин "RAVENCRAFT Beer Shop"</h2>
                     <p>Адрес: г. Воронеж, ул. 9 января, 262/6</p>
-                    <p>Телефон: +7-900-000-00-00</p>
+                    <p>Телефон: +7-920-467-65-08</p>
                 </div>
+                </a>
+
+                <a href="http://hmelnik-vrn.ru/shops/" target="_blank">
                 <div class="shop">
                     <h2 class="palker">Сеть магазинов "ХМЕЛЬНИК"</h2>
                     <p>Адрес: г. Воронеж</p>
-                    <p>Телефон: +7-900-000-00-00</p>
+                    <p>Телефон: +7-900-301-91-09</p>
                 </div>
+                </a>
+
+                <a href="http://vbeermir.ru/contacts/" target="_blank">  
                 <div class="shop">
                     <h2 class="palker">Сеть магазинов "Бир Мир"</h2>
-                    <p>Адрес: г. Воронеж, ул. 9 января, 262/6</p>
-                    <p>Телефон: +7-900-000-00-00</p>
+                    <p>Адрес: Воронеж, Москва, Орёл, Белгород, Тула</p>
+                    <p>Телефон: +7-800-700-5875</p>
                 </div>
-                <div class="shop">
-                    <h2 class="palker">Бар "Дудки"</h2>
-                    <p>Адрес: г. Воронеж, ул. 9 января, 262/6</p>
-                    <p>Телефон: +7-900-000-00-00</p>
-                </div>
+                </a>  
+
+
+
             </div>
         </div>
     </article>
