--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -116,10 +116,16 @@
     float: left;
     border: 1px solid white;
     border-radius: 100px;
-    width: 28px;
-    height: 28px;
+    width: 35px;
+    height: 35px;
     background-position: center;
     background-repeat: no-repeat;
+    transition-duration: 0.3s;
+}
+
+.h_logos a:hover {
+    box-shadow: 0 0 0 2px inset white;
+   
 }
 
 .h_address {
@@ -168,6 +174,15 @@
 
 .show_btn:hover {
     background-color: white;
+    color: black;
+}
+
+.show_btn a {
+    text-decoration: none;
+    color: white;
+}
+
+.show_btn a:hover {
     color: black;
 }
 
