--- a/app/static/css/where_buy.css
+++ b/app/static/css/where_buy.css
@@ -23,3 +23,12 @@
     padding: 5px 0;
 }
 
+.shop_list a {
+	text-decoration: none;
+	color: black;
+}
+
+.shop_list:hover {
+	cursor: pointer;
+}
+
