--- a/app/templates/app/catalog.html
+++ b/app/templates/app/catalog.html
@@ -8,6 +8,27 @@
     <script type="text/javascript" src="{% static 'js/bottles.js' %}"></script>
     <script>
         $(document).ready(function () {
+            $(".image_big").each(function(){
+               var img = $(this).attr("data-val");
+               $(this).attr("src",img);
+            });
+            $(".bottle_image").click(function () {
+                 var big_image = $(this).siblings(".big_image_wr");
+                 if(big_image.length > 0) {
+                     $(".light_box").removeClass("hidden");
+                     setTimeout(function () {
+                         $(".light_box").addClass("op1");
+                     }, 1)
+                     big_image.removeClass("fake_hidden");
+                 }
+            });
+            $(".big_image_wr").click(function () {
+               $(".light_box").removeClass("op1");
+                setTimeout(function () {
+                     $(".light_box").addClass("hidden");
+                },300);
+                $(".big_image_wr").addClass("fake_hidden");
+            });
             $(".sub_group").click(function () {
                 if (!$(this).hasClass("current")) {
                     var cur_group = $(".cur_group").html();
@@ -22,7 +43,7 @@
                             $("#loading").addClass("hidden");
                              refeel_props();
                         });
-                    }, 1000)
+                    }, 0)
 
                 }
             });
@@ -33,6 +54,7 @@
 
 {% block main %}
     <article>
+        <div class="light_box hidden"></div>
         <div class="top_pict"></div>
         <div class="content mw">
             <div class="art_label palker mw">
@@ -79,7 +101,12 @@
                 <div class="beer_list">
                     {% for bottle in bottles_catalog %}
                         <div id="{{ bottle.sub_name }}" class="bottle_wr">
-                            <img alt="{{ bottle.name }}" src="{{ bottle.image_index.url }}"/>
+                            <img class="bottle_image" alt="{{ bottle.name }}" src="{{ bottle.image_index.url }}"/>
+                            {% if bottle.image_big.name is not None %}
+                            <div class="big_image_wr fake_hidden">
+                               <span class="helper"></span> <img class="image_big" alt="" src="" data-val="{{ bottle.image_big.url }}"/>
+                            </div>
+                            {% endif %}
                             <div id="desc_bottle{{ forloop.counter }}" class="list bottle_desc_item">
                                 <h3 class="bottle_name palker">{{ bottle.name }}</h3>
                                 <div class="desc_table">
