--- a/app/templates/app/contacts.html
+++ b/app/templates/app/contacts.html
@@ -3,6 +3,9 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/second_template.css' %}">
     <link rel="stylesheet" href="{% static 'css/contacts.css' %}">
+    <title>Контакты | Крафтовая пивоварня Ravencraft</title>
+    <meta name="description"
+          content="Адрес завода: Ленинский просп, 158/3, подробная информация на карте">
     <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
     <script>
         $(document).ready(function () {
@@ -62,18 +65,20 @@
                     </div>
                     <div class="c_form_block">
                         <p><b>Мы в соц. сетях</b></p>
-                <div class="h_logos">
-                    <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
-                    <a href="https://www.facebook.com/Ravencraftbeer" target="_blank" class="facebook_circle"></a>
-                    <a href="https://www.instagram.com/ravencraftvrn/" target="_blank" class="instagram_circle"></a>
-                </div>
+                        <div class="h_logos">
+                            <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
+                            <a href="https://www.facebook.com/Ravencraftbeer" target="_blank"
+                               class="facebook_circle"></a>
+                            <a href="https://www.instagram.com/ravencraftvrn/" target="_blank"
+                               class="instagram_circle"></a>
+                        </div>
                     </div>
                     <div class="c_form_block">
                         <p>Напишите нам:</p>
                         <form>
                             <textarea></textarea>
                             <div class="oh">
-                            <div class="write_us_btn"> Отправить</div>
+                                <div class="write_us_btn"> Отправить</div>
                             </div>
                         </form>
                     </div>
