--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="{% static 'css/bottles.css' %}">
     <link rel="stylesheet" href="{% static 'css/news.css' %}">
 
+    <title>Крафтовая пивоварня Ravencraft: крафтовое пиво, сидр</title>
+    <meta name="description"
+          content="Мы делаем крафтовое пиво из натуральных продуктов. У нас вы сможете купить пиво и сидр как оптом, так и в розницу">
+    <meta name="Keywords" content="Крафтовая пивоварня, Ravencraft, крафтовое пиво, купить пиво, сидр">
     <script type="text/javascript" src="{% static 'js/bottles.js' %}"></script>
 {% endblock %}
 
