--- a/app/templates/app/news.html
+++ b/app/templates/app/news.html
@@ -4,10 +4,10 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/second_template.css' %}">
     <link rel="stylesheet" href="{% static 'css/news.css' %}">
-    <script
-            src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
+    <title> Актуальные новости крафтовой пивоварни Ravencraft | Крафтовая пивоварня Ravencraft</title>
+    <meta name="description"
+          content="Здесь вы найдете самые последние новости крафтовой пивоварни Ravencraft">
+
     <script>
         var page = 1;
         $(document).ready(function () {
