--- a/app/templates/app/where_buy.html
+++ b/app/templates/app/where_buy.html
@@ -5,6 +5,10 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/second_template.css' %}">
     <link rel="stylesheet" href="{% static 'css/where_buy.css' %}">
+    <title>Где купить | Крафтовая пивоварня Ravencraft</title>
+    <meta name="description"
+          content="Адреса точек продажи крафтовой пивоварни Ravencraft">
+
 {% endblock head %}
 
 
@@ -26,29 +30,28 @@
             </div>
             <div class="shop_list segoe">
                 <a href="https://vk.com/ravencraftshop" target="_blank">
-                <div class="shop">
-                    <h2 class="palker">Фирменный магазин "RAVENCRAFT Beer Shop"</h2>
-                    <p>Адрес: г. Воронеж, ул. 9 января, 262/6</p>
-                    <p>Телефон: +7-920-467-65-08</p>
-                </div>
+                    <div class="shop">
+                        <h2 class="palker">Фирменный магазин "RAVENCRAFT Beer Shop"</h2>
+                        <p>Адрес: г. Воронеж, ул. 9 января, 262/6</p>
+                        <p>Телефон: +7-920-467-65-08</p>
+                    </div>
                 </a>
 
                 <a href="http://hmelnik-vrn.ru/shops/" target="_blank">
-                <div class="shop">
-                    <h2 class="palker">Сеть магазинов "ХМЕЛЬНИК"</h2>
-                    <p>Адрес: г. Воронеж</p>
-                    <p>Телефон: +7-900-301-91-09</p>
-                </div>
+                    <div class="shop">
+                        <h2 class="palker">Сеть магазинов "ХМЕЛЬНИК"</h2>
+                        <p>Адрес: г. Воронеж</p>
+                        <p>Телефон: +7-900-301-91-09</p>
+                    </div>
                 </a>
 
-                <a href="http://vbeermir.ru/contacts/" target="_blank">  
-                <div class="shop">
-                    <h2 class="palker">Сеть магазинов "Бир Мир"</h2>
-                    <p>Адрес: Воронеж, Москва, Орёл, Белгород, Тула</p>
-                    <p>Телефон: +7-800-700-5875</p>
-                </div>
-                </a>  
-
+                <a href="http://vbeermir.ru/contacts/" target="_blank">
+                    <div class="shop">
+                        <h2 class="palker">Сеть магазинов "Бир Мир"</h2>
+                        <p>Адрес: Воронеж, Москва, Орёл, Белгород, Тула</p>
+                        <p>Телефон: +7-800-700-5875</p>
+                    </div>
+                </a>
 
 
             </div>
