--- a/app/templates/app/news_item.html
+++ b/app/templates/app/news_item.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" src="{% static 'js/bottles.js' %}"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+    <title>{{ news_item.name }} | Крафтовая пивоварня Ravencraft</title>
+    <meta name="description"
+          content="{{ news_item.short_description}}">
 {% endblock %}
 {% block main %}
     <article>
