--- a/app/templates/app/second_template.html
+++ b/app/templates/app/second_template.html
@@ -6,6 +6,8 @@
         <div class="mw header_inner">
             <a class="h_logo" href="/">
                 <img src="{% static 'images/template/Raven_logo.png' %}"/>
+                <p class="underlogo_text">Сварено в Воронеже</p>
+                <p class="underlogo_text2">Сварено с любовью</p>
             </a>
             <nav class="h_nav palker">
                 <div class="h_nav_item">
@@ -45,9 +47,9 @@
                 <p class="h_phone">+7-473-239-20-20</p>
                 <p class="h_address">г. Воронеж, ул. Остужева, д. 157</p>
                 <div class="h_logos">
-                    <a href="" class="vk_circle"></a>
-                    <a href="" class="facebook_circle"></a>
-                    <a href="" class="instagram_circle"></a>
+                    <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
+                    <a href="https://www.facebook.com/Ravencraftbeer" target="_blank" class="facebook_circle"></a>
+                    <a href="https://www.instagram.com/ravencraftvrn/" target="_blank" class="instagram_circle"></a>
                 </div>
             </div>
         </div>
