--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -60,9 +60,9 @@
                 <p class="h_phone">+7-473-239-20-20</p>
                 <p class="h_address">г. Воронеж, ул. Остужева, д. 157</p>
                 <div class="h_logos">
-                    <a href="" class="vk_circle"></a>
-                    <a href="" class="facebook_circle"></a>
-                    <a href="" class="instagram_circle"></a>
+                    <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
+                    <a href="https://www.facebook.com/Ravencraftbeer" target="_blank" class="facebook_circle"></a>
+                    <a href="https://www.instagram.com/ravencraftvrn/" target="_blank" class="instagram_circle"></a>
                 </div>
             </div>
         </div>
