Иконки на главной странице обновлены

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -350,7 +350,7 @@
             <div class="mw features">
                 <div class="col4">
                     <div class="feature_item">
-                        <img alt="" src="{% static 'images/index/features/beer.png' %}"/>
+                        <img alt="" src="{% static 'images/index/features/glass_150.png' %}"/>
                         <p class="palker feature_label">Качество прежде всего</p>
                         <p class="segoe feature_text">Не видим смысла в изготовлении очередного массового продукта, мы
                             варим
@@ -359,29 +359,23 @@
                 </div>
                 <div class="col4">
                     <div class="feature_item">
-                        <img alt="" src="{% static 'images/index/features/beer.png' %}"/>
-                        <p class="palker feature_label">Качество прежде всего</p>
-                        <p class="segoe feature_text">Не видим смысла в изготовлении очередного массового продукта, мы
-                            варим
-                            правильное пиво</p>
+                        <img alt="" src="{% static 'images/index/features/hop_150.png' %}"/>
+                        <p class="palker feature_label">Натуральные ингредиенты</p>
+                        <p class="segoe feature_text">Для варки используем только экологичные продукты от фермеров</p>
                     </div>
                 </div>
                 <div class="col4">
                     <div class="feature_item">
-                        <img alt="" src="{% static 'images/index/features/beer.png' %}"/>
-                        <p class="palker feature_label">Качество прежде всего</p>
-                        <p class="segoe feature_text">Не видим смысла в изготовлении очередного массового продукта, мы
-                            варим
-                            правильное пиво</p>
+                        <img alt="" src="{% static 'images/index/features/people_150.png' %}"/>
+                        <p class="palker feature_label">Профессиональная команда</p>
+                        <p class="segoe feature_text">Опытные пивовары, технологи и управленцы составляют нашу команду, которой мы по-настоящему гордимся</p>
                     </div>
                 </div>
                 <div class="col4">
                     <div class="feature_item">
-                        <img alt="" src="{% static 'images/index/features/beer.png' %}"/>
-                        <p class="palker feature_label">Качество прежде всего</p>
-                        <p class="segoe feature_text">Не видим смысла в изготовлении очередного массового продукта, мы
-                            варим
-                            правильное пиво</p>
+                        <img alt="" src="{% static 'images/index/features/barrel_150.png' %}"/>
+                        <p class="palker feature_label">Собственное оборудование</p>
+                        <p class="segoe feature_text">Используем оборудование собственной торговой марки, в котором реализованы наши ноу-хау, а также передовые зарубежные разработки</p>
                     </div>
                 </div>
             </div>
