--- a/app/templates/app/contacts.html
+++ b/app/templates/app/contacts.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="c_form_block">
                         <p><b>Мы в соц. сетях</b></p>
-                        <div class="h_logos">
+                        <div class="h_logos h_logos2">
                             <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
                             <a href="https://www.facebook.com/Ravencraftbeer" target="_blank"
                                class="facebook_circle"></a>
