--- a/app/templates/app/second_template.html
+++ b/app/templates/app/second_template.html
@@ -44,7 +44,7 @@
                 </div>
             </nav>
             <div class="h_contacts segoe">
-                <p class="h_phone">+7-473-239-20-20</p>
+                <p class="h_phone">+7 (920) 467-65-08</p>
                 <p class="h_address">г. Воронеж, ул. Остужева, д. 157</p>
                 <div class="h_logos">
                     <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
