--- a/app/templates/app/template.html
+++ b/app/templates/app/template.html
@@ -33,8 +33,12 @@
                     {% endfor %}
                 </div>
                 <div class="f_btns oh">
-                    <p class="distr"><b>Дистрибьюторам</b></p>
-                    <p class="opt"><b>Оптовым клиентам</b></p>
+                    <a href="\static\images\template\Ravencraft_for_distributors.pdf" target="_blank">
+                        <p class="distr"><b>Дистрибьюторам</b></p>
+                    </a>
+                    <a href="\static\images\template\Ravencraft_for_opt.pdf" target="_blank">
+                        <p class="opt"><b>Оптовым клиентам</b></p>
+                    </a>
                 </div>
                 <div class="f_copyright">Все права защищены 2018</div>
             </div>
