--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -57,7 +57,7 @@
                 </div>
             </nav>
             <div class="h_contacts segoe">
-                <p class="h_phone">+7-473-239-20-20</p>
+                <p class="h_phone">+7 (920) 467-65-08</p>
                 <p class="h_address">г. Воронеж, ул. Остужева, д. 157</p>
                 <div class="h_logos">
                     <a href="https://vk.com/ravencraftbeer" target="_blank" class="vk_circle"></a>
@@ -73,7 +73,9 @@
     <article class="pr">
         <div class="big_block ">
             <h1 class="palker">Делаем крафтовое пиво в Воронеже из натуральных продуктов</h1>
-            <div class="show_btn segoe"> Посмотреть</div>
+                <a href="/nashi-sorta/pivo/all">
+                    <div class="show_btn segoe"> Посмотреть</div> 
+                </a>
         </div>
         <div class="up_circles"></div>
     </article>
